test/invalid/idl/exposed.webidl
interface UnexposedInterface {};
partial interface UnexposedInterface {};
namespace UnexposedNamespace {};
partial namespace UnexposedNamespace {};
